Package structure is changed. GC VM options included